fixed scrollbar popping up issue with 50% translateY

--- a/Siphome/client/src/components/Navbar/mobile/Mobile.scss
+++ b/Siphome/client/src/components/Navbar/mobile/Mobile.scss
@@ -94,7 +94,7 @@
       opacity: 1;
     }
     to{
-      transform: translateY(100%);
+      transform: translateY(50%);
       opacity:0;
     }
   }
